--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🎉 Happy New Year 🎉</title>
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Pacifico&display=swap" rel="stylesheet">
-
+  <title>Happy New Year 2025 🎉</title>
   <style>
-    /* ---- Base ---- */
-    *,*::before,*::after{box-sizing:border-box}
-    html,body{height:100%}
+    /* Reset */
+    *{box-sizing:border-box;margin:0;padding:0}
+
     body{
-      margin:0;
-      display:flex;flex-direction:column;align-items:center;justify-content:center;
-      background:linear-gradient(135deg,#071a22,#0f2b36,#153c48);
-      color:#fff;
-      overflow:hidden;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      height:100vh;
+      background:linear-gradient(135deg,#3a0ca3,#7209b7,#f72585);
       font-family:'Montserrat',system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      overflow:hidden;
+      color:#fff;
     }
 
-    /* ---- Heading ---- */
+    /* Heading */
     .feliz{
       margin:0 16px 24px;
       text-align:center;
@@ -29,19 +28,21 @@
       font-size:clamp(36px,6vw,72px);
       line-height:1.05;
       letter-spacing:0.5px;
-      color:#ffeb3b;                /* gold */
+      color:#4cc9f0;
       text-shadow:0 3px 14px rgba(0,0,0,.35);
       white-space:nowrap;
+      opacity:0;
+      transform:translateY(-40px);
+      animation:fadeSlideIn 3s ease-out forwards;
     }
 
-    /* ---- Stage (where years animate) ---- */
-    .stage{
+    /* Year container */
+    .year{
       position:relative;
-      width:min(780px,92vw);
-      height:clamp(120px,18vw,200px);
-      overflow:hidden;
       display:grid;
       place-items:center;
+      width:100%;
+      height:clamp(120px,30vw,260px);
     }
 
     .yearLayer{
@@ -50,143 +51,45 @@
       font-weight:800;
       font-size:clamp(72px,18vw,160px);
       letter-spacing:4px;
-      /* orange -> amber like your screenshot */
-      background:linear-gradient(90deg,#ff8a00,#ffb300);
+      background:linear-gradient(90deg,#ffdd00,#ff4ecd);
       -webkit-background-clip:text;
       background-clip:text;
       -webkit-text-fill-color:transparent;
       text-shadow:0 6px 22px rgba(0,0,0,.35);
       opacity:0;
-      will-change:transform,opacity;
-    }
-    .yearLayer.visible{opacity:1}
-
-    /* ---- Animations ---- */
-    .slide-out-left{ animation:slideOutLeft .8s ease forwards }
-    .slide-in-right{ animation:slideInRight .8s ease forwards }
-    .pop{ animation:pop .5s ease-in-out forwards }
-
-    @keyframes slideOutLeft{
-      0%{ transform:translateX(0); opacity:1 }
-      100%{ transform:translateX(-260px); opacity:0 }
-    }
-    @keyframes slideInRight{
-      0%{ transform:translateX(260px); opacity:0 }
-      100%{ transform:translateX(0); opacity:1 }
-    }
-    @keyframes pop{
-      0%{ transform:scale(1) }
-      50%{ transform:scale(1.06) }
-      100%{ transform:scale(1) }
+      transform:scale(0.8);
+      animation:popIn 3s ease-out forwards;
+      animation-delay:3s; /* comes after heading finishes */
     }
 
-    /* Footer tag */
-    footer.n{
-      position:absolute;left:0;right:0;bottom:0;
-      text-align:center;padding:14px 10px;
-      background:rgba(0,0,0,.35);
-      font-size:14px
+    /* Footer */
+    footer{
+      position:absolute;
+      bottom:18px;
+      font-size:14px;
+      color:#fff;
+      opacity:0.8;
     }
 
-    /* Reduced motion safety */
-    @media (prefers-reduced-motion:reduce){
-      .slide-out-left,.slide-in-right,.pop{animation-duration:.001s !important}
+    /* Animations */
+    @keyframes fadeSlideIn{
+      from{opacity:0;transform:translateY(-40px);}
+      to{opacity:1;transform:translateY(0);}
+    }
+    @keyframes popIn{
+      0%{opacity:0;transform:scale(0.8);}
+      60%{opacity:1;transform:scale(1.1);}
+      100%{opacity:1;transform:scale(1);}
     }
   </style>
 </head>
 <body>
   <h1 class="feliz">🎉 Happy New Year 🎉</h1>
 
-  <div class="stage">
-    <div id="layerA" class="yearLayer visible"></div>
-    <div id="layerB" class="yearLayer"></div>
+  <div class="year">
+    <div class="yearLayer">2025</div>
   </div>
 
-  <footer class="n">
-    <h3>Made with ❤️ by Hritik Mondal</h3>
-  </footer>
-
-  <script>
-    // Elements
-    const a = document.getElementById('layerA');
-    const b = document.getElementById('layerB');
-
-    // State
-    let shownYear = new Date().getFullYear();
-    let current = a;   // currently visible layer
-    let next    = b;   // offscreen layer
-    let animating = false;
-
-    // Helpers
-    const setText = (el, y) => { el.textContent = String(y); };
-
-    // Ensure animation actually fires (force reflow)
-    const raf = (fn) => requestAnimationFrame(() => requestAnimationFrame(fn));
-
-    function finalizeSwap(newYear){
-      // Make 'next' the visible one; reset 'current'
-      current.className = 'yearLayer';
-      next.className = 'yearLayer visible';
-
-      // keep both layers in sync text
-      setText(current, newYear);
-
-      // swap references
-      [current, next] = [next, current];
-      shownYear = newYear;
-      animating = false;
-    }
-
-    function animateTo(newYear){
-      if(animating) return;
-      animating = true;
-
-      // prepare next layer with the new text and make it visible (no animation yet)
-      setText(next, newYear);
-      next.className = 'yearLayer visible';
-
-      // Force a reflow before adding animation classes to guarantee the CSS animations fire
-      raf(() => {
-        current.classList.add('slide-out-left');
-        next.classList.add('slide-in-right');
-
-        // Clean up when animations finish
-        const onInEnd = (e)=>{
-          if(e.animationName !== 'slideInRight') return;
-          next.classList.remove('slide-in-right');
-          next.classList.add('pop');
-          setTimeout(()=>{ next.classList.remove('pop'); finalizeSwap(newYear); }, 180);
-          next.removeEventListener('animationend', onInEnd);
-        };
-        const onOutEnd = (e)=>{
-          if(e.animationName !== 'slideOutLeft') return;
-          current.classList.remove('slide-out-left');
-          current.removeEventListener('animationend', onOutEnd);
-        };
-        next.addEventListener('animationend', onInEnd);
-        current.addEventListener('animationend', onOutEnd);
-      });
-    }
-
-    // -------- Init --------
-    const realYear = new Date().getFullYear();
-    // Start by showing last year so you *see* the animation right away
-    setText(current, realYear - 1);
-    setText(next, realYear - 1);
-
-    // After a short delay, animate into the real current year
-    setTimeout(()=> animateTo(realYear), 600);
-
-    // Also watch for actual midnight changes
-    setInterval(()=>{
-      const y = new Date().getFullYear();
-      if(y !== shownYear && !animating){
-        animateTo(y);
-      }
-    }, 1000);
-
-    // Optional tester in DevTools: demoFlip(2026)
-    window.demoFlip = (y)=> animateTo(Number(y)||shownYear+1);
-  </script>
+  <footer>✨ Made by Hritik Mondal ✨</footer>
 </body>
 </html>
