--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>🎉 Happy New Year 🎉</title>
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="src/assets/boy.svg"/>
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Pacifico&display=swap" rel="stylesheet">
 
@@ -57,7 +60,7 @@
     }
     .yearLayer.visible{opacity:1}
 
-    /* ---- Animations (slowed to 3s) ---- */
+    /* Slow animations (3s) */
     .slide-out-left{ animation:slideOutLeft 3s ease forwards }
     .slide-in-right{ animation:slideInRight 3s ease forwards }
     .pop{ animation:pop 3s ease-in-out forwards }
