--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>🎉 Happy New Year 🎉</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="src/assets/boy.svg"/>
+  <link rel="icon" type="image/svg+xml" href="dancing.svg"/>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Pacifico&display=swap" rel="stylesheet">
@@ -167,3 +167,4 @@
   </script>
 </body>
 </html>
+
