--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>🎉 Happy New Year 🎉</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="dancing.svg"/>
+  <link rel="icon" type="image/svg+xml" href="src/assets/boy.svg"/>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Pacifico&display=swap" rel="stylesheet">
@@ -17,7 +17,6 @@
     body{
       margin:0;
       display:flex;flex-direction:column;align-items:center;justify-content:center;
-      background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
       color:#fff;
       overflow:hidden;
       font-family:'Montserrat',system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
@@ -50,7 +49,6 @@
       font-weight:800;
       font-size:clamp(72px,18vw,160px);
       letter-spacing:4px;
-      background:linear-gradient(90deg,#00f0ff,#0078ff);
       -webkit-background-clip:text;
       background-clip:text;
       -webkit-text-fill-color:transparent;
@@ -104,6 +102,27 @@
   </footer>
 
   <script>
+    // 🎨 Gradient sets (background, year text)
+    const gradients = [
+      { bg: ['#0f2027', '#203a43', '#2c5364'], text: ['#00f0ff', '#0078ff'] },
+      { bg: ['#1a2a6c', '#b21f1f', '#fdbb2d'], text: ['#ff512f', '#dd2476'] },
+      { bg: ['#42275a', '#734b6d'], text: ['#f7971e', '#ffd200'] },
+      { bg: ['#134e5e', '#71b280'], text: ['#ff5f6d', '#ffc371'] },
+      { bg: ['#000428', '#004e92'], text: ['#76b852', '#8DC26F'] }
+    ];
+
+    // Pick random gradient
+    const picked = gradients[Math.floor(Math.random() * gradients.length)];
+
+    // Apply background gradient
+    document.body.style.background = `linear-gradient(135deg, ${picked.bg.join(', ')})`;
+
+    // Apply text gradient to year layers
+    document.querySelectorAll('.yearLayer').forEach(el => {
+      el.style.background = `linear-gradient(90deg, ${picked.text.join(', ')})`;
+    });
+
+    // Elements
     const a = document.getElementById('layerA');
     const b = document.getElementById('layerB');
 
@@ -167,4 +186,3 @@
   </script>
 </body>
 </html>
-
